--- a/templates/seller_login.html
+++ b/templates/seller_login.html
@@ -6,27 +6,33 @@
 </head>
 <body>
 <h1>商家登录界面</h1>
-<form method="post" action="{% url 'app1:seller_login'%}">
+<form method="post" action="{% url 'app1:buyer_login'%}">
     {% csrf_token %}
 
     <label>
-        账号
-        <input type="text" name="user_name" value="{{form.data.user_name}}">{{ form.errors.user_name.0 }}
+        用户名
+        <input type="text" name="name" value="{{form.data.name}}">{{ form.errors.name.0 }}
     </label>
     <br>
 
     <label>
         密码
-        <input type="password" name="user_password">{{ form.errors.user_password.0 }}
+        <input type="password" name="password">{{ form.errors.password.0 }}
 
     </label>
+    <br>
+    {% if errmsg %}
+    {{ errmsg }}
+    {% else %}
+    {{ form.non_field_errors.0 }}
+    {% endif %}
     <br>
     <button type="submit">登录</button>&nbsp;&nbsp;&nbsp;&nbsp;
     <input type="button" value="用户登录" onclick="window.location.href='/buyer_login/'"></button>&nbsp;&nbsp;&nbsp;&nbsp;
     <input type="button" value="注册" onclick="window.location.href='/seller_register/'"></button>&nbsp;&nbsp;&nbsp;&nbsp;
     <input type="button" value="返回首页" onclick="window.location.href='/index/'"></button>
-</form>
 
+</form>
 
 </body>
 </html>
