--- a/templates/buyer_login.html
+++ b/templates/buyer_login.html
@@ -11,15 +11,21 @@
 
     <label>
         账号
-        <input type="text" name="user_name" value="{{form.data.user_name}}">{{ form.errors.user_name.0 }}
+        <input type="text" name="name" value="{{form.data.name}}">{{ form.errors.name.0 }}
     </label>
     <br>
 
     <label>
         密码
-        <input type="password" name="user_password">{{ form.errors.user_password.0 }}
+        <input type="password" name="password">{{ form.errors.password.0 }}
 
     </label>
+    <br>
+    {% if errmsg %}
+    {{ errmsg }}
+    {% else %}
+    {{ form.non_field_errors.0 }}
+    {% endif %}
     <br>
     <button type="submit">登录</button>&nbsp;&nbsp;&nbsp;&nbsp;
     <input type="button" value="商家登录" onclick="window.location.href='/seller_login/'"></button>&nbsp;&nbsp;&nbsp;&nbsp;
