--- a/templates/seller_register.html
+++ b/templates/seller_register.html
@@ -39,24 +39,24 @@
     {% csrf_token %}
 
     <label>
-        &nbsp;用户名&nbsp;:&nbsp;&nbsp;&nbsp;
-        <input type="text" name="user_name" value="{{form.data.user_name}}">{{ form.errors.user_name.0 }}
+        &nbsp;账号&nbsp;:&nbsp;&nbsp;&nbsp;
+        <input type="text" name="name" value="{{form.data.user_name}}">{{ form.errors.user_name.0 }}
     </label>
     <br>
 
     <label>
          &nbsp;密&nbsp;码&nbsp;:&nbsp;&nbsp;&nbsp;
-        <input type="password" name="user_password" value="{{form.data.user_password}}">{{ form.errors.user_password.0 }}
+        <input type="password" name="password" value="{{form.data.user_password}}">{{ form.errors.user_password.0 }}
     </label>
     <br>
     <label>
         确认密码
-        <input type="password" name="user_password2" value="{{form.data.user_password2}}">{{ form.errors.user_password2.0 }}
+        <input type="password" name="password2" value="{{form.data.user_password2}}">{{ form.errors.user_password2.0 }}
     </label>
     <br>
     <label>
         Email:&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="email" name="user_email" value="{{ form.data.user_email }}">
+        <input type="email" name="email" value="{{ form.data.user_email }}">
     </label>
     <input type="button" onclick="check_email(user_email)" value="获取验证码"></input>{{ form.errors.user_email.0 }}
     <br>
