--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 <input type="button" name='id' id='id' value="用户入口" onclick="window.location.href='/buyer_login/'"></button>
 <input type="button" name='id' id='id' value="商家入口" onclick="window.location.href='/seller_login/'"></button>
 </form>
+<img src="{{ MEDIA_URL }}/default.jpg">
 
 </body>
 </html>
