--- a/templates/order.html
+++ b/templates/order.html
@@ -51,7 +51,7 @@
     </select>
     <br>
     <button type="submit">立即购买</button>
-    <input type="button" value="取消购买" onclick="window.location.href='/good_info/{{ i.id }}/'">
+    <input type="button" value="取消购买" onclick="window.location.href='/good_info/{{ item.id }}/'">
 </form>
 
 {% endif %}
